bug fixed on mobile responsiveness

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -224,7 +224,7 @@
   }
 
   .navbar {
-    background: white;
+    background: red;
   }
 }
 
